@@ -1,7 +1,5 @@
 package org.ck.adventofcode.year2021.day06;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -15,10 +13,10 @@ import org.ck.codechallengelib.annotation.Solution;
     category = "2021")
 public class Part1 {
   public static void main(String[] args) {
-    List<Integer> fish = new ArrayList<>();
+    List<Integer> fish;
 
     try (Scanner in = new Scanner(System.in)) {
-      fish = Arrays.stream(in.nextLine().split(",")).map(Integer::valueOf).collect(toList());
+      fish = Arrays.stream(in.nextLine().split(",")).map(Integer::valueOf).toList();
     }
 
     for (int i = 0; i < 80; ++i) {
